--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                </h1>
                <div>
-                <button onclick = "createFalshCard()"> 
+                <button onclick = "createFlashCard()"> 
                     new flash card
                 </button>
                 <button onclick="deleteAllFlashCards()">
